--- a/lefthook.yml
+++ b/lefthook.yml
@@ -5,9 +5,13 @@ pre-commit:
     - name: Check lockfile
       run: bun install --frozen-lockfile --silent
 
-    - name: Lint & Format
-      run: bun format
+    - name: Lint
+      run: bun run lint:fix
+      stage_fixed: true
+
+    - name: Format
+      run: bun run format
       stage_fixed: true
 
     - name: Typecheck
-      run: bun typecheck
+      run: bun run typecheck
