--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/backend",
+  "name": "@repo/server",
   "private": true,
   "type": "module",
   "main": "./src/index.ts",
@@ -10,8 +10,6 @@
     "#services/*": "./src/services/*.ts"
   },
   "scripts": {
-    "dev": "bun --watch src/index.ts",
-    "build": "bun build --compile --sourcemap --minify src/index.ts --outfile dist/server",
     "typecheck": "tsgo --noEmit"
   },
   "dependencies": {
