--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,20 +19,20 @@
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-devtools": "^0.9.2",
     "@tanstack/react-form": "^1.27.7",
-    "@tanstack/react-form-devtools": "^0.2.11",
-    "@tanstack/react-query": "^5.90.18",
+    "@tanstack/react-form-devtools": "^0.2.12",
+    "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-query-devtools": "^5.91.2",
-    "@tanstack/react-router": "^1.151.0",
-    "@tanstack/react-router-devtools": "^1.151.0",
+    "@tanstack/react-router": "^1.154.14",
+    "@tanstack/react-router-devtools": "^1.154.14",
     "@tanstack/react-router-with-query": "^1.130.17",
-    "@tanstack/react-start": "^1.151.0",
+    "@tanstack/react-start": "^1.154.14",
     "@tanstack/react-store": "^0.8.0",
     "@tanstack/react-table": "^8.21.3",
     "better-auth": "catalog:",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.562.0",
-    "motion": "^12.26.2",
+    "lucide-react": "^0.563.0",
+    "motion": "^12.29.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -45,14 +45,15 @@
   },
   "devDependencies": {
     "@convex-dev/auth": "^0.0.90",
+    "@repo/convex": "workspace:*",
     "@repo/server": "workspace:*",
     "@tanstack/devtools-vite": "^0.4.1",
-    "@types/react": "^19.2.8",
+    "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
     "convex": "^1.31.6",
     "elysia": "catalog:",
-    "nitro": "^3.0.1-alpha.1",
+    "nitro": "^3.0.1-alpha.2",
     "tw-animate-css": "^1.4.0"
   }
 }
