--- a/packages/convex/package.json
+++ b/packages/convex/package.json
@@ -4,7 +4,18 @@
 	"private": true,
 	"type": "module",
 	"exports": {
-		"./*": "./convex/*"
+		"./*": "./convex/*",
+		"./_generated/api": {
+			"types": "./convex/_generated/api.d.ts",
+			"default": "./convex/_generated/api.js"
+		},
+		"./_generated/dataModel": {
+			"types": "./convex/_generated/dataModel.d.ts"
+		},
+		"./_generated/server": {
+			"types": "./convex/_generated/server.d.ts",
+			"default": "./convex/_generated/server.js"
+		}
 	},
 	"scripts": {
 		"dev": "convex dev",
@@ -12,11 +23,11 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
-		"@auth/core": "^0.34.3",
+		"@auth/core": "^0.41.1",
 		"@convex-dev/auth": "^0.0.90",
 		"@oslojs/crypto": "^1.0.1",
-		"convex": "^1.31.5",
-		"resend": "^4.0.0"
+		"convex": "^1.31.6",
+		"resend": "^6.8.0"
 	},
 	"devDependencies": {
 		"@repo/tsconfig": "workspace:*"
